WIP on connecting enroll mutation to form
